nodejs-image-demo-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodejs-image-demo
  labels:
    app: nodejs-image-demo
spec:
  host: nodejs-demo-mejriis-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
  to:
    kind: Service
    name: nodejs-image-demo
    weight: 100
  port:
    targetPort: 8080-tcp
